// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateTagihan > should coalesce the first date amount into the bulanan 1`] = `
{
  "FEBRI": [
    [],
    [],
    [],
    [
      "NAMA ALAT",
      "PERIODE",
      "LAMA SEWA",
      "JUMLAH ALAT",
      "HARGA SEWA",
      "TOTAL",
      "SUBTOTAL",
    ],
    [
      "Alat 1",
      "01/01/2024 - 31/01/2024",
      "1 BL",
      110,
      15,
      1650,
      1650,
    ],
    [
      "Sewa=15",
    ],
    [],
    [
      "Jumlah",
      undefined,
      undefined,
      undefined,
      undefined,
      1650,
      1650,
    ],
    [
      "PPN",
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      181.5,
    ],
    [
      "Total",
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      1468.5,
    ],
  ],
}
`;

exports[`generateTagihan > should create the 1bl records given a mixed rekapan where there are gaps
  for one of the alats, and filled in dates for the other alats
   1`] = `
{
  "FEBRI": [
    [],
    [],
    [],
    [
      "NAMA ALAT",
      "PERIODE",
      "LAMA SEWA",
      "JUMLAH ALAT",
      "HARGA SEWA",
      "TOTAL",
      "SUBTOTAL",
    ],
    [
      "Alat 1",
      "12/01/2024 - 31/01/2024",
      "20 HR",
      5,
      3.33,
      333,
    ],
    [
      "Sewa=100",
      "01/01/2024 - 31/01/2024",
      "1 BL",
      10,
      100,
      1000,
      1333,
    ],
    [],
    [
      "Alat 2",
      "01/01/2024 - 31/01/2024",
      "1 BL",
      20,
      300,
      6000,
      6000,
    ],
    [
      "Sewa=300",
    ],
    [],
    [
      "Jumlah",
      undefined,
      undefined,
      undefined,
      undefined,
      7333,
      7333,
    ],
    [
      "PPN",
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      806.63,
    ],
    [
      "Total",
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      6526.37,
    ],
  ],
}
`;

exports[`generateTagihan > should generate a single from date until end of month record for single positive record 1`] = `
{
  "FEBRI": [
    [],
    [],
    [],
    [
      "NAMA ALAT",
      "PERIODE",
      "LAMA SEWA",
      "JUMLAH ALAT",
      "HARGA SEWA",
      "TOTAL",
      "SUBTOTAL",
    ],
    [
      "Alat 1",
      "09/01/2024 - 31/01/2024",
      "23 HR",
      10,
      0.48,
      110.4,
    ],
    [
      "Sewa=15",
      "01/01/2024 - 31/01/2024",
      "1 BL",
      0,
      15,
      0,
      110.4,
    ],
    [],
    [
      "Alat 2",
      "09/01/2024 - 31/01/2024",
      "23 HR",
      20,
      0.81,
      372.6,
    ],
    [
      "Sewa=25",
      "01/01/2024 - 31/01/2024",
      "1 BL",
      0,
      25,
      0,
      372.6,
    ],
    [],
    [
      "Jumlah",
      undefined,
      undefined,
      undefined,
      undefined,
      483,
      483,
    ],
    [
      "PPN",
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      53.13,
    ],
    [
      "Total",
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      429.87,
    ],
  ],
}
`;

exports[`generateTagihan > should generate multiple 1BL records if you have a negative at the end of the month and a normal 1BL month 1`] = `
{
  "FEBRI": [
    [],
    [],
    [],
    [
      "NAMA ALAT",
      "PERIODE",
      "LAMA SEWA",
      "JUMLAH ALAT",
      "HARGA SEWA",
      "TOTAL",
      "SUBTOTAL",
    ],
    [
      "Alat 1",
      "01/01/2024 - 31/01/2024",
      "1 BL",
      50,
      15,
      750,
    ],
    [
      "Sewa=15",
      "01/01/2024 - 31/01/2024",
      "1 BL",
      50,
      15,
      750,
      1500,
    ],
    [],
    [
      "Jumlah",
      undefined,
      undefined,
      undefined,
      undefined,
      1500,
      1500,
    ],
    [
      "PPN",
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      165,
    ],
    [
      "Total",
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      1335,
    ],
  ],
}
`;

exports[`generateTagihan > should generate multiple dates until end of month records for multiple positive records 1`] = `
{
  "FEBRI": [
    [],
    [],
    [],
    [
      "NAMA ALAT",
      "PERIODE",
      "LAMA SEWA",
      "JUMLAH ALAT",
      "HARGA SEWA",
      "TOTAL",
      "SUBTOTAL",
    ],
    [
      "Alat 1",
      "09/01/2024 - 31/01/2024",
      "23 HR",
      10,
      0.48,
      110.4,
    ],
    [
      "Sewa=15",
      "11/01/2024 - 31/01/2024",
      "21 HR",
      30,
      0.48,
      302.4,
    ],
    [
      undefined,
      "01/01/2024 - 31/01/2024",
      "1 BL",
      100,
      15,
      1500,
      1912.8,
    ],
    [],
    [
      "Alat 2",
      "09/01/2024 - 31/01/2024",
      "23 HR",
      20,
      0.81,
      372.6,
    ],
    [
      "Sewa=25",
      "11/01/2024 - 31/01/2024",
      "21 HR",
      40,
      0.81,
      680.4,
    ],
    [
      undefined,
      "01/01/2024 - 31/01/2024",
      "1 BL",
      200,
      25,
      5000,
      6053,
    ],
    [],
    [
      "Jumlah",
      undefined,
      undefined,
      undefined,
      undefined,
      7965.8,
      7965.8,
    ],
    [
      "PPN",
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      876.24,
    ],
    [
      "Total",
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      7089.56,
    ],
  ],
}
`;

exports[`generateTagihan > should generate the from selected date until end of month positive record
        and negative from start of month until selected date, so a mix here  1`] = `
{
  "FEBRI": [
    [],
    [],
    [],
    [
      "NAMA ALAT",
      "PERIODE",
      "LAMA SEWA",
      "JUMLAH ALAT",
      "HARGA SEWA",
      "TOTAL",
      "SUBTOTAL",
    ],
    [
      "Alat 1",
      "01/01/2024 - 09/01/2024",
      "9 HR",
      10,
      0.48,
      43.2,
    ],
    [
      "Sewa=15",
      "11/01/2024 - 31/01/2024",
      "21 HR",
      50,
      0.48,
      504,
    ],
    [
      undefined,
      "01/01/2024 - 31/01/2024",
      "1 BL",
      90,
      15,
      1350,
      1897.2,
    ],
    [],
    [
      "Alat 2",
      "09/01/2024 - 31/01/2024",
      "23 HR",
      20,
      0.81,
      372.6,
    ],
    [
      "Sewa=25",
      "01/01/2024 - 11/01/2024",
      "11 HR",
      40,
      0.81,
      356.4,
    ],
    [
      undefined,
      "01/01/2024 - 31/01/2024",
      "1 BL",
      110,
      25,
      2750,
      3479,
    ],
    [],
    [
      "Jumlah",
      undefined,
      undefined,
      undefined,
      undefined,
      5376.2,
      5376.2,
    ],
    [
      "PPN",
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      591.38,
    ],
    [
      "Total",
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
      4784.82,
    ],
  ],
}
`;
